--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./Style/cart.css" />
+    <link rel="stylesheet" href="./Style/footer.css">
   </head>
   <body>
     <div id="out">
@@ -80,7 +81,8 @@
         />
       </div>
     </div>
+    <footer></footer>
   </body>
 </html>
 
-<script src=" ./Script/cart.js"></script>
+<script type="module" src=" ./Script/cart.js"></script>
