--- a/offers.html
+++ b/offers.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./Style/offers.css" />
+    <link rel="stylesheet" href="./Style/footer.css">
   </head>
 
   <body>
     <h3>Latest deals</h3>
 
     <div id="shivContainer"></div>
+    <footer></footer>
   </body>
 </html>
 
-<script src="./Script/offers.js"></script>
+<script type="module" src="./Script/offers.js"></script>
