--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
     />
+    <link rel="stylesheet" href="./Style/navbar.css">
     <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
@@ -20,10 +21,17 @@
     <link rel="stylesheet" href="./Style/index.css" />
     <link rel="stylesheet" href="./Style/footer.css" />
   </head>
+
   <body>
+     <div id="main_export"> </div>
+
+
     <div id="Slide_bar_container"></div>
 
-    <ul class="pagination" style="top: 340px; height: 20px">
+    <ul class="pagination" style="top:480px;height: 20px; margin-left: 147px;">
+      <!-- top: 633px;
+      height: 20px;
+      margin-left: 147px; -->
       <li class="dot"><a href="#0">1</a></li>
       <li class="dot"><a href="#1">2</a></li>
       <li class="dot"><a href="#2">3</a></li>
