--- a/offers.html
+++ b/offers.html
@@ -7,9 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="./Style/offers.css" />
     <link rel="stylesheet" href="./Style/footer.css">
+    <link rel="stylesheet" href="./Style/navbar.css">
   </head>
 
   <body>
+    <div id="main_export"> </div>
     <h3>Latest deals</h3>
 
     <div id="shivContainer"></div>
