--- a/rewards.html
+++ b/rewards.html
@@ -7,10 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Style/rewards.css">
     <link rel="stylesheet" href="./Style/footer.css">
+    <link rel="stylesheet" href="./Style/navbar.css">
     <title>Rewards</title>
 </head>
 
 <body>
+    <div id="main_export"> </div>
+
+
     <div>
         <div><a href="cart.html">cart</a></div>
         <div><a href="gift.html">gift</a></div>
