--- a/cart.html
+++ b/cart.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./Style/cart.css" />
+    <link rel="stylesheet" href="./Style/navbar.css">
     <link rel="stylesheet" href="./Style/footer.css">
   </head>
   <body>
+    <div id="main_export"> </div>
+    
     <div id="out">
       <div id="cartContainer"></div>
       <div id="alia">
