--- a/gift.html
+++ b/gift.html
@@ -7,10 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Style/gift.css">
     <link rel="stylesheet" href="./Style/footer.css">
+    <link rel="stylesheet" href="./Style/navbar.css">
     <title>Gifting</title>
 </head>
 
 <body>
+    <div id="main_export"> </div>
+    
     <div id="main">
         <div id="left">
 
