--- a/voucher.html
+++ b/voucher.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="./style/append.css">
     <link rel="stylesheet" href="./Style/voucher.css">
     <link rel="stylesheet" href="./Style/footer.css">
+    <link rel="stylesheet" href="./Style/navbar.css">
     <title>E-Gift Voucher</title>
 </head>
 
 <body>
+    <div id="main_export"> </div>
+
+
     <div id="main">
         <div id="left">
 
