--- a/cart.html
+++ b/cart.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="./Style/cart.css" />
     <link rel="stylesheet" href="./Style/navbar.css">
     <link rel="stylesheet" href="./Style/footer.css">
+    <link rel="stylesheet" href="./Style/nav1.css">
   </head>
   <body>
     <div id="main_export"> </div>
+    <div id="nav1"></div>
     
     <div id="out">
       <div id="cartContainer"></div>
