--- a/gift.html
+++ b/gift.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="./Style/gift.css">
     <link rel="stylesheet" href="./Style/footer.css">
     <link rel="stylesheet" href="./Style/navbar.css">
+    <link rel="stylesheet" href="./Style/nav1.css">
     <title>Gifting</title>
 </head>
 
 <body>
     <div id="main_export"> </div>
+    <div id="nav1"></div>
     
     <div id="main">
         <div id="left">
