--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
     />
     <link rel="stylesheet" href="./Style/navbar.css">
+    <link rel="stylesheet" href="./Style/nav1.css">
     <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
@@ -24,6 +25,7 @@
 
   <body>
      <div id="main_export"> </div>
+     <div id="nav1"></div>
 
 
     <div id="Slide_bar_container"></div>
