--- a/offers.html
+++ b/offers.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="./Style/offers.css" />
     <link rel="stylesheet" href="./Style/footer.css">
     <link rel="stylesheet" href="./Style/navbar.css">
+    <link rel="stylesheet" href="./Style/nav1.css">
   </head>
 
   <body>
     <div id="main_export"> </div>
+    <div id="nav1"></div>
     <h3>Latest deals</h3>
 
     <div id="shivContainer"></div>
