--- a/rewards.html
+++ b/rewards.html
@@ -8,20 +8,13 @@
     <link rel="stylesheet" href="./Style/rewards.css">
     <link rel="stylesheet" href="./Style/footer.css">
     <link rel="stylesheet" href="./Style/navbar.css">
+    <link rel="stylesheet" href="./Style/nav1.css">
     <title>Rewards</title>
 </head>
 
 <body>
     <div id="main_export"> </div>
-
-
-    <div>
-        <div><a href="cart.html">cart</a></div>
-        <div><a href="gift.html">gift</a></div>
-        <div><a href="index.html">home</a></div>
-        <div><a href="offers.html">offer</a></div>
-        <div><a href="rewards.html">rewards</a></div>
-    </div>
+    <div id="nav1"></div>
     <div id="container">
         <div id="box1">
             <!-- <button  >About the Rewards Program</button> -->
