--- a/voucher.html
+++ b/voucher.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="./Style/voucher.css">
     <link rel="stylesheet" href="./Style/footer.css">
     <link rel="stylesheet" href="./Style/navbar.css">
+    <link rel="stylesheet" href="./Style/nav1.css">
     <title>E-Gift Voucher</title>
 </head>
 
 <body>
     <div id="main_export"> </div>
+    <div id="nav1"></div>
 
 
     <div id="main">
