--- a/all_hamper.html
+++ b/all_hamper.html
@@ -11,10 +11,7 @@
     <link rel="stylesheet" href="./Style/nav1.css">
     <!-- <link rel="stylesheet" href="./Style/navbar.css"> -->
     <title>All Hampers</title>
-    <script
-      src="https://kit.fontawesome.com/24c494a6b6.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/24c494a6b6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
