--- a/gift.html
+++ b/gift.html
@@ -9,10 +9,7 @@
     <link rel="stylesheet" href="./Style/footer.css">
     <!-- <link rel="stylesheet" href="./Style/navbar.css"> -->
     <link rel="stylesheet" href="./Style/nav1.css">
-    <script
-      src="https://kit.fontawesome.com/24c494a6b6.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/24c494a6b6.js" crossorigin="anonymous"></script>
     <title>Gifting</title>
 </head>
 
